minor eda changes to visualisations

--- a/Risk-Analysis-EDA-CASESTUDY.ipynb
+++ b/Risk-Analysis-EDA-CASESTUDY.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +261,7 @@
        "[3000 rows x 25 columns]>"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 353,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +281,7 @@
        "(3000, 25)"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 354,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +600,7 @@
        "max          5.000000     4.000000     2.000000    22.000000  "
       ]
      },
-     "execution_count": 290,
+     "execution_count": 356,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +636,7 @@
        "<Axes: xlabel='Income Band'>"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 358,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -955,7 +955,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Univariate Analysis of Categorical Variables\n",
+    "# Univariate Analysis of Categorical Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
     "\n",
     "We explored the distribution of all categorical variables in the dataset to understand the frequency of each category. \n",
     "\n",
@@ -970,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1252,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bivariate Analysis by Nationality\n",
+    "# Bivariate Analysis by Nationality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "We explored how the distribution of categorical variables differs across nationalities. Key insights include:\n",
     "\n",
@@ -1256,6 +1269,13 @@
     "Europeans own the most properties, followed by Asians and then Americans.\n",
     "\n",
     "Risk weighting is highest for Europeans compared to other nationalities."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Numerical Analysis"
    ]
   }
  ],
